--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
-  <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<head>
-
-  </head>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
   <header>
     <h1>International</h1>
     <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
-  <!-- 🔁 Marquee -->
   <div class="marquee-wrapper" style="background: linear-gradient(90deg, #0f172a, #000080); padding: 8px 0; color: #ffeb3b; font-size: 14px; font-weight: bold; font-family: 'Arial', sans-serif;">
     <marquee behavior="scroll" direction="left" scrollamount="6" onmouseover="this.stop()" onmouseout="this.start()">
       📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet, Melbet, PlnBet — নিচিন্তে একাউন্ট করুন নিজেই ডিপোজিট উইথড্র করুন । বিশেষ সুবিধা cash out সিস্টেম | এখনই জয়েন করুন! 🎁
     </marquee>
   </div>
 
-  <!-- 💰 Deposit & Withdraw -->
   <div class="button-container">
     <button onclick="showPopup('deposit')" class="btn-style">🪙Deposit</button>
     <button onclick="showPopup('withdraw')" class="btn-style">💶Withdraw</button>
@@ -38,10 +33,9 @@
     </div>
   </div>
 
-  <!-- 🔗 Combo Sections -->
   <div id="combo-container">
 
-    <!-- 1xBet -->
+    <!-- 1xBet Section -->
     <section class="brand-section" id="1xbet">
       <div class="tag-popular">Popular</div>
       <h2>1xBet</h2>
@@ -54,7 +48,7 @@
       </div>
     </section>
 
-    <!-- Linebet -->
+    <!-- Linebet Section -->
     <section class="brand-section" id="linebet">
       <div class="tag-popular">Popular</div>
       <h2>Linebet</h2>
@@ -67,7 +61,7 @@
       </div>
     </section>
 
-    <!-- Melbet -->
+    <!-- Melbet Section -->
     <section class="brand-section" id="melbet">
       <div class="tag-popular">Recommend</div>
       <h2>Melbet</h2>
@@ -80,7 +74,7 @@
       </div>
     </section>
 
-    <!-- PlanBet -->
+    <!-- PlanBet Section -->
     <section class="brand-section" id="planbet">
       <div class="tag-popular">New 🌍</div>
       <h2>PlanBet</h2>
@@ -93,7 +87,7 @@
       </div>
     </section>
 
-    <!-- Betwiner -->
+    <!-- Betwiner Section -->
     <section class="brand-section" id="betwiner">
       <div class="tag-popular">Promo</div>
       <h2>Betwiner</h2>
@@ -108,10 +102,9 @@
 
   </div>
 
-  <!-- 🎁 Promo Section -->
   <section id="promo-section">
     <h2>🎁 Get Your Bonus Now!</h2>
-    <p><strong>Promo Code:</strong> <span class="promo">Oxy11</span></p>
+    <p><strong>Promo Code:</strong> Oxy11</p>
     <p><strong>Contact:</strong> <a href="tel:+8801826444505">+8801826444505</a> (Telegram / WhatsApp / IMO)</p>
 
     <a href="https://wa.me/8801826444505?text=Hi%2C%20I%20want%20to%20join%20your%20WhatsApp%20group" target="_blank" class="whatsapp-button">
@@ -126,21 +119,10 @@
     </div>
   </section>
 
-  <!-- 🔁 Footer -->
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
 
-  <!-- JS File -->
   <script src="script.js"></script>
-
-  <!-- Animation -->
-  <style>
-    @keyframes slideUp {
-      from {opacity: 0; transform: translateY(30px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-  </style>
-
 </body>
 </html>
