--- a/index.html
+++ b/index.html
@@ -6,25 +6,12 @@
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
   <link rel="stylesheet" href="style.css" />
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>1xBet & Linebet - অফিসিয়াল জয়েন পেজ</title>
-
-  <!-- SEO Meta -->
-  <meta name="description" content="অফিসিয়াল 1xBet ও Linebet জয়েন করুন Promo Code: Oxy11 দিয়ে! আজই অ্যাকাউন্ট খুলুন ও জিতে নিন বোনাস!" />
-
-  <!-- Open Graph (Facebook, Messenger, WhatsApp) -->
-  <meta property="og:title" content="1xBet & Linebet - অফিসিয়াল জয়েন পেজ" />
-  <meta property="og:description" content="অফিসিয়াল 1xBet ও Linebet জয়েন করুন Promo Code: Oxy11 দিয়ে! আজই অ্যাকাউন্ট খুলুন ও জিতে নিন বোনাস!" />
-  <meta property="og:image" content="https://i.ibb.co/p3NVwcy/og-1xbet-linebet.jpg" />
-  <meta property="og:url" content="https://1xbet24.netlify.app/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="bn_BD" />
-  <meta property="fb:app_id" content="1234567890" /> <!-- Optional, warning fix -->
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  </head>
+  <!-- Facebook Open Graph Meta Tags -->
+<meta property="og:title" content="Join 1xBet & Linebet Today – Use Promo Code Oxy11" />
+<meta property="og:description" content="Official 1xBet and Linebet affiliate site. Get bonuses, fast payment options and 24/7 support. Promo Code: Oxy11" />
+<meta property="og:image" content="https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.png" />
+<meta property="og:url" content="https://1xbet24.netlify.app/" />
+<meta property="og:type" content="website" />
 </head>
 <body>
 
