--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <title>এশিয়ার সেরা ব্যাটিং সাইট</title>
   <link rel="stylesheet" href="style.css" />
   <head>
-  <!-- Facebook Open Graph Meta Tags -->
-<meta property="og:title" content="Join 1xBet & Linebet Today – Use Promo Code Oxy11" />
-<meta property="og:description" content="Official 1xBet and Linebet affiliate site. Get bonuses, fast payment options and 24/7 support. Promo Code: Oxy11" />
-<meta property="og:image" content="https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.png" />
-<meta property="og:url" content="https://1xbet24.netlify.app/" />
-<meta property="og:type" content="website" />
 </head>
 <body>
+  <!-- Hero Banner Section -->
+<section style="background: url('https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.jpg') center/cover no-repeat; height: 250px; display: flex; align-items: center; justify-content: center;">
+  <h1 style="color: white; font-size: 2rem; background: rgba(0,0,0,0.5); padding: 10px 20px; border-radius: 10px;">1xBet & Linebet - Promo Code: Oxy11</h1>
+</section>
 
   <header>
     <h1>International</h1>
