--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <title>1xBet & Linebet Promo</title>
 
   <!-- ✅ Open Graph Meta Tags for Facebook preview -->
-  <meta property="og:title" content="1xBet & Linebet - Join Now with Promo Code Oxy11" />
-  <meta property="og:description" content="Official Partner Site. Get Bonuses using Promo Code: Oxy11. Register Today!" />
+  <meta property="og:title" content="1xBet & Linebet -Promo Code Oxy11" />
+  <meta property="og:description" content="Get Bonuses using Promo Code: Oxy11. Register Today!" />
   <meta property="og:image" content="https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.jpg" />
   <meta property="og:url" content="https://asmsajib789.github.io/Combo/" />
   <meta property="og:type" content="website" />
