--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
     </section>
 
   </div>
+  <section id="how-to-register">
+  <h2 style="text-align:center;">কিভাবে একাউন্ট খুলবেন</h2>
+  <div style="text-align:center;">
+    <iframe width="320" height="180" src="https://www.youtube.com/embed/ভিডিও_আইডি" frameborder="0" allowfullscreen></iframe>
+  </div>
+</section>
 
   <section id="promo-section">
     <h2>🎁 Get Your Bonus Now!</h2>
