--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- ✅ Open Graph Meta Tags for Facebook preview -->
   <meta property="og:title" content="1xBet & Linebet -Promo Code Oxy11" />
-  <meta property="og:description" content="Get Bonuses using Promo Code: Oxy11. Register Today!" />
+  <meta property="og:description" content="আইডি করে নিতে 01826444505 imo whatsApp  করুন" />
   <meta property="og:image" content="https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.jpg" />
   <meta property="og:url" content="https://asmsajib789.github.io/Combo/" />
   <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
 <body>
 
   <header>
-    <h1>International</h1>
+    <h1>1xbet-Linebet </h1>
     <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
