--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
         <a href="https://linebet.press/oxy11" target="_blank">🎰Casino</a>
         <a href="https://bangladesh.bonus-linebet.com/oxy11" target="_blank">🎲Slots</a>
+        <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank">🏆Supar Ace</a>
       </div>
     </section>
 
