--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="tag-popular">Popular</div>
       <h2>Linebet</h2>
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
-       <a href="" target="_blank">ডেমো দেখুন 👇</a>
+       <p class="payment-info">ডেমো দেখুন 👇</p>
       <div class="category-links">
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
         <a href="https://linebet.press/oxy11" target="_blank">🎰Casino</a>
