--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
       <div class="tag-popular">Popular</div>
       <h2>1xBet</h2>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xBet</a>
-      <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
+       <p class="payment-info"><b>ডেমো দেখুন 👇</b></p>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank">🎰Casino</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=slots/wild-west-spin" target="_blank">🎲Slots</a>
+        <a href="https://refpa58144.com/L?tag=d_905607m_2528c_Oxy11&site=905607&ad=2528&r=slots/game/105803/super-ace-deluxe" target="_blank">🏆Supar Ace</a>
+      </div>
       </div>
     </section>
 
