--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="brand-section" id="1xbet">
       <div class="tag-popular">Popular</div>
       <h2>1xBet</h2>
-      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">Register👉 1xBet</a>
+      <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">1xbet Register</a>
        <p class="payment-info"><b>ডেমো দেখুন 👇</b></p>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
@@ -67,7 +67,7 @@
     <section class="brand-section" id="linebet">
       <div class="tag-popular">Popular</div>
       <h2>Linebet</h2>
-      <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Register👉 Linebet</a>
+      <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Linebet Register</a>
        <p class="payment-info"><b>ডেমো দেখুন 👇</b></p>
       <div class="category-links">
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
@@ -81,7 +81,7 @@
     <section class="brand-section" id="melbet">
       <div class="tag-popular">Recommend</div>
       <h2>Melbet</h2>
-      <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Register👉 Melbet</a>
+      <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Melbet Register</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://melbet6767.netlify.app/" target="_blank">🏟️Sports</a>
@@ -94,7 +94,7 @@
     <section class="brand-section" id="planbet">
       <div class="tag-popular">New 🌍</div>
       <h2>PlanBet</h2>
-      <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank">Register👉 Planbet</a>
+      <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank">Planbet Register</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://planbet.me/Oxy11" target="_blank">🏟️Sports</a>
@@ -107,7 +107,7 @@
     <section class="brand-section" id="betwiner">
       <div class="tag-popular">Promo</div>
       <h2>Betwiner</h2>
-      <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Register👉 Betwiner</a>
+      <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Betwiner Register</a>
       <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
       <div class="category-links">
         <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🏏Sports</a>
