--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <iframe width="320" height="180" src="https://www.youtube.com/embed/ভিডিও_আইডি" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
-  <h2>Betwiner</h2>
+  <h2>Agent Method</h2>
   <style>
   .payment-table {
     width: 100%;
@@ -141,7 +141,7 @@
   }
 
   .payment-table th {
-    background-color: #003366;
+    background-color: #FFA500;
     color: white;
   }
 
