--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     .payment-table td::before {
       content: attr(data-label);
       font-weight: bold;
-      color: #003366;
+      color: #FFD700;
     }
 
     .payment-table td:last-child {
