--- a/index.html
+++ b/index.html
@@ -191,20 +191,8 @@
   </thead>
   <tbody>
     <tr>
-      <td data-label="Gateway">Bkash</td>
-      <td data-label="Site Name">1xBet</td>
-      <td data-label="Deposit">৳50 to Unlimited</td>
-      <td data-label="Withdraw">৳150 to Unlimited</td>
-    </tr>
-    <tr>
-      <td data-label="Gateway">Nagad</td>
-      <td data-label="Site Name">Linebet</td>
-      <td data-label="Deposit">৳50 to Unlimited</td>
-      <td data-label="Withdraw">৳150 to Unlimited</td>
-    </tr>
-    <tr>
-      <td data-label="Gateway">Rocket</td>
-      <td data-label="Site Name">Melbet</td>
+      <td data-label="Gateway"><b>Bkash,Nagad,Rocket</b></td>
+      <td data-label="Site Name"><b>1xbet, Linebet</b></td>
       <td data-label="Deposit">৳50 to Unlimited</td>
       <td data-label="Withdraw">৳150 to Unlimited</td>
     </tr>
