--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <iframe width="320" height="180" src="https://www.youtube.com/embed/ভিডিও_আইডি" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
-  <h2>Agent Method</h2>
+  <h2><b>Master Agent Service</b></h2>
   <style>
   .payment-table {
     width: 100%;
