--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
       font-weight: bold;
       color: #FFD700;
     }
+    .pay-btn {
+    display: inline-block;
+    padding: 8px 14px;
+    background-color: #28a745;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 14px;
+  }
+
+  .pay-btn:hover {
+    background-color: #218838;
+  }
 
     .payment-table td:last-child {
       border-bottom: none;
