--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
   <footer>
     <p>© 2025 Official Site. All Rights Reserved.</p>
   </footer>
+  <a href="https://wa.me/8801826444505" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#25D366;padding:10px 20px;color:white;border-radius:30px;text-decoration:none;box-shadow:0 0 10px rgba(0,0,0,0.3);z-index:999;">
+  📞 WhatsApp Now
+  </a>
 
   <script src="script.js"></script>
 </body>
