--- a/index.html
+++ b/index.html
@@ -239,5 +239,31 @@
   </a>
 
   <script src="script.js"></script>
+  <!-- ✅ Welcome Offer Popup -->
+<div id="welcome-popup" style="display:none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7);">
+  <div style="max-width: 90%; margin: 100px auto; background: white; border-radius: 10px; padding: 20px; text-align: center; position: relative;">
+    <h2 style="color: #1e90ff;">🎁 ওয়েলকাম অফার</h2>
+    <p>১xBet এ জয়েন করলে পাচ্ছেন <b>১০০% বোনাস</b> পর্যন্ত ২০,০০০৳!</p>
+    <p>Linebet, Melbet সাইটেও আকর্ষণীয় অফার চলছে।</p>
+    <a href="https://bd1xbet.netlify.app/" style="display: inline-block; margin-top: 15px; padding: 10px 20px; background: #1e90ff; color: white; border-radius: 5px; text-decoration: none;">এখনি জয়েন করুন</a>
+    <br/><br/>
+    <button onclick="closeWelcomePopup()" style="padding: 5px 15px; background: red; color: white; border: none; border-radius: 5px;">বন্ধ করুন</button>
+  </div>
+</div>
+
+<script>
+  function closeWelcomePopup() {
+    document.getElementById('welcome-popup').style.display = 'none';
+    localStorage.setItem('welcomePopupShown', 'true');
+  }
+
+  window.onload = function() {
+    if (!localStorage.getItem('welcomePopupShown')) {
+      setTimeout(() => {
+        document.getElementById('welcome-popup').style.display = 'block';
+      }, 2000); // 2 সেকেন্ড পর দেখাবে
+    }
+  };
+</script>
 </body>
 </html>
