--- a/index.html
+++ b/index.html
@@ -239,31 +239,30 @@
   </a>
 
   <script src="script.js"></script>
-  <!-- ✅ Welcome Offer Popup -->
-<div id="welcome-popup" style="display:none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7);">
-  <div style="max-width: 90%; margin: 100px auto; background: white; border-radius: 10px; padding: 20px; text-align: center; position: relative;">
-    <h2 style="color: #1e90ff;">🎁 ওয়েলকাম অফার</h2>
-    <p>১xBet এ জয়েন করলে পাচ্ছেন <b>১০০% বোনাস</b> পর্যন্ত ২০,০০০৳!</p>
-    <p>Linebet, Melbet সাইটেও আকর্ষণীয় অফার চলছে।</p>
-    <a href="https://bd1xbet.netlify.app/" style="display: inline-block; margin-top: 15px; padding: 10px 20px; background: #FF00FF; color: white; border-radius: 5px; text-decoration: none;">এখনি জয়েন করুন</a>
-    <br/><br/>
-    <button onclick="closeWelcomePopup()" style="padding: 5px 15px; background: red; color: white; border: none; border-radius: 5px;">বন্ধ করুন</button>
+<!-- Popup HTML -->
+<div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:9999;">
+  <div style="max-width:90%; width:350px; margin:10% auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
+    <h2 style="color:#1e88e5;">🎁 এক্সক্লুসিভ অফার!</h2>
+    <p>🔓 এখনই একাউন্ট খুলুন এবং নিন ১০০% বোনাস!</p>
+    <ul style="text-align:left; padding-left:20px;">
+      <li>✅ ওয়েলকাম বোনাস</li>
+      <li>✅ সহজ পেমেন্ট বিকাশ/নগদ</li>
+      <li>✅ লাইভ গেম, ক্যাসিনো ও স্পোর্টস</li>
+      <li>✅ ২৪/৭ হেল্পলাইন</li>
+    </ul>
+    <p>📞 Contact: <strong>+8801826444505</strong></p>
+    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" style="display:inline-block; margin-top:10px; background:#1e88e5; color:#fff; padding:10px 20px; border-radius:5px; text-decoration:none;">🎯 এখনই জয়েন করুন</a>
+    <button onclick="document.getElementById('popup').style.display='none'" style="position:absolute; top:5px; right:10px; background:none; border:none; font-size:18px; cursor:pointer;">✖️</button>
   </div>
 </div>
 
+<!-- JS to show popup on page load -->
 <script>
-  function closeWelcomePopup() {
-    document.getElementById('welcome-popup').style.display = 'none';
-    localStorage.setItem('welcomePopupShown', 'true');
-  }
-
   window.onload = function() {
-    if (!localStorage.getItem('welcomePopupShown')) {
-      setTimeout(() => {
-        document.getElementById('welcome-popup').style.display = 'block';
-      }, 2000); // 2 সেকেন্ড পর দেখাবে
-    }
-  };
+    setTimeout(function() {
+      document.getElementById('popup').style.display = 'block';
+    }, 1500); // 1.5 সেকেন্ড পর পপআপ দেখাবে
+  }
 </script>
 </body>
 </html>
