--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
     </div>
   </div>
 
+  <!-------popup------->
+  <!-- Popup HTML -->
+<div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:9999;">
+  <div style="max-width:90%; width:350px; margin:10% auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
+    <h2 style="color:#1e88e5;">🎁 এক্সক্লুসিভ অফার!</h2>
+    <p>🔓 এখনই একাউন্ট খুলুন এবং নিন ১০০% বোনাস!</p>
+    <ul style="text-align:left; padding-left:20px;">
+      <li>✅ ওয়েলকাম বোনাস</li>
+      <li>✅ সহজ পেমেন্ট বিকাশ/নগদ</li>
+      <li>✅ লাইভ গেম, ক্যাসিনো ও স্পোর্টস</li>
+      <li>✅ ২৪/৭ হেল্পলাইন</li>
+    </ul>
+    <p>📞 Contact: <strong>+8801826444505</strong></p>
+    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" style="display:inline-block; margin-top:10px; background:#1e88e5; color:#fff; padding:10px 20px; border-radius:5px; text-decoration:none;">🎯 এখনই জয়েন করুন</a>
+    <button onclick="document.getElementById('popup').style.display='none'" style="position:absolute; top:5px; right:10px; background:none; border:none; font-size:18px; cursor:pointer;">✖️</button>
+  </div>
+</div>
+
+<!-- JS to show popup on page load -->
+<script>
+  window.onload = function() {
+    setTimeout(function() {
+      document.getElementById('popup').style.display = 'block';
+    }, 1500); // 1.5 সেকেন্ড পর পপআপ দেখাবে
+  }
+</script>
+  <!------ses------->
+
   <div id="combo-container">
 
     <!-- 1xBet Section -->
@@ -239,30 +267,6 @@
   </a>
 
   <script src="script.js"></script>
-<!-- Popup HTML -->
-<div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:9999;">
-  <div style="max-width:90%; width:350px; margin:10% auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
-    <h2 style="color:#1e88e5;">🎁 এক্সক্লুসিভ অফার!</h2>
-    <p>🔓 এখনই একাউন্ট খুলুন এবং নিন ১০০% বোনাস!</p>
-    <ul style="text-align:left; padding-left:20px;">
-      <li>✅ ওয়েলকাম বোনাস</li>
-      <li>✅ সহজ পেমেন্ট বিকাশ/নগদ</li>
-      <li>✅ লাইভ গেম, ক্যাসিনো ও স্পোর্টস</li>
-      <li>✅ ২৪/৭ হেল্পলাইন</li>
-    </ul>
-    <p>📞 Contact: <strong>+8801826444505</strong></p>
-    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" style="display:inline-block; margin-top:10px; background:#1e88e5; color:#fff; padding:10px 20px; border-radius:5px; text-decoration:none;">🎯 এখনই জয়েন করুন</a>
-    <button onclick="document.getElementById('popup').style.display='none'" style="position:absolute; top:5px; right:10px; background:none; border:none; font-size:18px; cursor:pointer;">✖️</button>
-  </div>
-</div>
 
-<!-- JS to show popup on page load -->
-<script>
-  window.onload = function() {
-    setTimeout(function() {
-      document.getElementById('popup').style.display = 'block';
-    }, 1500); // 1.5 সেকেন্ড পর পপআপ দেখাবে
-  }
-</script>
 </body>
 </html>
