--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-------popup------->
   <!-- Popup HTML -->
 <div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:9999;">
-  <div style="max-width:90%; width:350px; margin:10% auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
+  <div style="max-width:90%; width:350px; margin:10% auto; background:#FF00FF; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
     <h2 style="color:#1e88e5;">🎁 এক্সক্লুসিভ অফার!</h2>
     <p>🔓 এখনই একাউন্ট খুলুন এবং নিন ১০০% বোনাস!</p>
     <ul style="text-align:left; padding-left:20px;">
