--- a/index.html
+++ b/index.html
@@ -33,30 +33,107 @@
   </div>
 
   <!-------popup------->
-  <!-- Popup HTML -->
-<div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:9999;">
-  <div style="max-width:90%; width:350px; margin:10% auto; background:#FF00FF; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); text-align:center; font-family:sans-serif; position:relative;">
-    <h2 style="color:#1e88e5;">🎁 এক্সক্লুসিভ অফার!</h2>
-    <p>🔓 এখনই একাউন্ট খুলুন এবং নিন ১০০% বোনাস!</p>
-    <ul style="text-align:left; padding-left:20px;">
-      <li>✅ ওয়েলকাম বোনাস</li>
-      <li>✅ সহজ পেমেন্ট বিকাশ/নগদ</li>
-      <li>✅ লাইভ গেম, ক্যাসিনো ও স্পোর্টস</li>
-      <li>✅ ২৪/৭ হেল্পলাইন</li>
-    </ul>
-    <p>📞 Contact: <strong>+8801826444505</strong></p>
-    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" style="display:inline-block; margin-top:10px; background:#1e88e5; color:#fff; padding:10px 20px; border-radius:5px; text-decoration:none;">🎯 এখনই জয়েন করুন</a>
-    <button onclick="document.getElementById('popup').style.display='none'" style="position:absolute; top:5px; right:10px; background:none; border:none; font-size:18px; cursor:pointer;">✖️</button>
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>পপআপ অফার</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    .popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .popup-content {
+      background: #ffffff;
+      padding: 30px 20px;
+      border-radius: 10px;
+      max-width: 320px;
+      width: 90%;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      animation: popupFadeIn 0.4s ease-in-out;
+    }
+
+    @keyframes popupFadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    .popup-content h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #0a57c3;
+    }
+
+    .popup-content p {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    .popup-content button {
+      padding: 10px 20px;
+      background-color: #0a57c3;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .popup-content button:hover {
+      background-color: #003f99;
+    }
+  </style>
+</head>
+<body>
+
+<!-- Popup Structure -->
+<div class="popup-overlay" id="popup">
+  <div class="popup-content">
+    <h2>🎁 বিশেষ অফার!</h2>
+    <p>১xBet-এ একাউন্ট খুললেই পাচ্ছেন ১০০% বোনাস!<br> ইউজ করুন প্রোমো কোড: <strong>Oxy11</strong></p>
+    <button onclick="closePopup()">এখনই একাউন্ট করুন</button>
   </div>
 </div>
-  <!-- JS to show popup on page load -->
+
 <script>
-  window.onload = function() {
-    setTimeout(function() {
-      document.getElementById('popup').style.display = 'block';
-    }, 1500); // 1.5 সেকেন্ড পর পপআপ দেখাবে
+  // Show popup after site load
+  window.onload = function () {
+    setTimeout(function () {
+      document.getElementById("popup").style.display = "flex";
+    }, 1000); // Delay 1s
+  };
+
+  // Close popup function
+  function closePopup() {
+    document.getElementById("popup").style.display = "none";
+    window.location.href = "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622"; // Affiliate link
   }
 </script>
+
+</body>
+</html>
   <!------ses------->
 
   <div id="combo-container">
