--- a/index.html
+++ b/index.html
@@ -33,80 +33,8 @@
   </div>
 
   <!-------popup------->
-<!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>পপআপ অফার</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-    }
 
-    .popup-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-
-    .popup-content {
-      background: #ffffff;
-      padding: 30px 20px;
-      border-radius: 10px;
-      max-width: 320px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-      animation: popupFadeIn 0.4s ease-in-out;
-    }
-
-    @keyframes popupFadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.9);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
-
-    .popup-content h2 {
-      font-size: 20px;
-      margin-bottom: 10px;
-      color: #0a57c3;
-    }
-
-    .popup-content p {
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
-
-    .popup-content button {
-      padding: 10px 20px;
-      background-color: #0a57c3;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .popup-content button:hover {
-      background-color: #003f99;
-    }
-  </style>
-</head>
-<body>
+      
 
 <!-- Popup Structure -->
 <div class="popup-overlay" id="popup">
@@ -128,7 +56,101 @@
   // Close popup function
   function closePopup() {
     document.getElementById("popup").style.display = "none";
-    window.location.href = "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622"; // Affiliate link
+    window.location.href =<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Popup Demo</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .popup-content {
+      background-color: #fff;
+      padding: 25px 20px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 300px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      position: relative;
+      animation: zoomIn 0.4s ease;
+    }
+
+    .popup-content h2 {
+      color: black;
+      margin-bottom: 10px;
+      font-size: 22px;
+    }
+
+    .popup-content p {
+      color: black;
+      font-size: 16px;
+    }
+
+    .popup-close {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      font-size: 22px;
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+    }
+
+    @keyframes zoomIn {
+      from {
+        transform: scale(0.5);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<!-- Popup -->
+<div class="popup-overlay" id="popup">
+  <div class="popup-content">
+    <span class="popup-close" onclick="closePopup()">×</span>
+    <h2>🎉 বিশেষ অফার!</h2>
+    <p>এখনই জয়েন করুন 1xBet, Linebet বা Melbet-এ<br>অফিশিয়াল প্রোমো কোড: <b>Oxy11</b></p>
+    <p>🎁 ফ্রি বোনাস ও স্পিন অফার!</p>
+  </div>
+</div>
+
+<script>
+  function closePopup() {
+    document.getElementById("popup").style.display = "none";
+  }
+
+  window.addEventListener("load", function () {
+    setTimeout(function () {
+      document.getElementById("popup").style.display = "flex";
+    }, 500); // 0.5 সেকেন্ড পর popup দেখাবে
+  });
+</script>
+
+</body>
+</html> "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622"; // Affiliate link
   }
 </script>
 
