--- a/index.html
+++ b/index.html
@@ -32,31 +32,7 @@
     </marquee>
   </div>
 
-  <!-------popup------->
-
-      
-
-<!-- Popup Structure -->
-<div class="popup-overlay" id="popup">
-  <div class="popup-content">
-    <h2>🎁 বিশেষ অফার!</h2>
-    <p>১xBet-এ একাউন্ট খুললেই পাচ্ছেন ১০০% বোনাস!<br> ইউজ করুন প্রোমো কোড: <strong>Oxy11</strong></p>
-    <button onclick="closePopup()">এখনই একাউন্ট করুন</button>
-  </div>
-</div>
-
-<script>
-  // Show popup after site load
-  window.onload = function () {
-    setTimeout(function () {
-      document.getElementById("popup").style.display = "flex";
-    }, 1000); // Delay 1s
-  };
-
-  // Close popup function
-  function closePopup() {
-    document.getElementById("popup").style.display = "none";
-    window.location.href =<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
@@ -150,12 +126,8 @@
 </script>
 
 </body>
-</html> "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622"; // Affiliate link
-  }
-</script>
-
-</body>
 </html>
+
   <!------ses------->
 
   <div id="combo-container">
