--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Popup Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Register Popup</title>
   <style>
     body {
       margin: 0;
@@ -46,12 +46,10 @@
 
     .popup-overlay {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      display: none;
       justify-content: center;
       align-items: center;
       z-index: 9999;
@@ -61,11 +59,17 @@
       background-color: #fff;
       padding: 25px 20px;
       border-radius: 10px;
+      max-width: 320px;
+      width: 90%;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
       text-align: center;
-      max-width: 300px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
       position: relative;
       animation: zoomIn 0.4s ease;
+    }
+
+    @keyframes zoomIn {
+      from { transform: scale(0.5); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
     .popup-content h2 {
@@ -77,27 +81,34 @@
     .popup-content p {
       color: black;
       font-size: 16px;
+      margin-bottom: 20px;
     }
 
     .popup-close {
       position: absolute;
-      top: 8px;
-      right: 12px;
-      font-size: 22px;
+      top: 8px; right: 12px;
+      font-size: 24px;
       font-weight: bold;
       color: black;
       cursor: pointer;
+      user-select: none;
     }
 
-    @keyframes zoomIn {
-      from {
-        transform: scale(0.5);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
+    .register-btn {
+      background-color: #0a57c3;
+      color: white;
+      padding: 12px 25px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+    }
+
+    .register-btn:hover {
+      background-color: #003f99;
     }
   </style>
 </head>
@@ -109,7 +120,7 @@
     <span class="popup-close" onclick="closePopup()">×</span>
     <h2>🎉 বিশেষ অফার!</h2>
     <p>এখনই জয়েন করুন 1xBet, Linebet বা Melbet-এ<br>অফিশিয়াল প্রোমো কোড: <b>Oxy11</b></p>
-    <p>🎁 ফ্রি বোনাস ও স্পিন অফার!</p>
+    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="register-btn">Register Now</a>
   </div>
 </div>
 
@@ -121,7 +132,7 @@
   window.addEventListener("load", function () {
     setTimeout(function () {
       document.getElementById("popup").style.display = "flex";
-    }, 500); // 0.5 সেকেন্ড পর popup দেখাবে
+    }, 500); // 0.5 সেকেন্ড পরে দেখাবে
   });
 </script>
 
