--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <span class="popup-close" onclick="closePopup()">×</span>
     <h2>🎉 বিশেষ অফার!</h2>
     <p>এখনই জয়েন করুন 1xBet, Linebet বা Melbet-এ<br>অফিশিয়াল প্রোমো কোড: <b>Oxy11</b></p>
-    <a href="https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622" target="_blank" class="register-btn">Register Now</a>
+    <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank" class="register-btn">🚀Aviator Game</a>
   </div>
 </div>
 
