--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- ✅ Open Graph Meta Tags for Facebook preview -->
   <meta property="og:title" content="1xBet & Linebet -Promo Code Oxy11" />
-  <meta property="og:description" content="আইডি করে নিতে 01826444505 imo whatsApp  করুন" />
+  <meta property="og:description" content="Crash/Aviator/Super Ace/Money Coming" />
   <meta property="og:image" content="https://raw.githubusercontent.com/asmsajib789/Combo/main/1xbet-promo.jpg" />
   <meta property="og:url" content="https://asmsajib789.github.io/Combo/" />
   <meta property="og:type" content="website" />
@@ -121,7 +121,9 @@
     <h2>🎉 বিশেষ অফার!</h2>
     <p>এখনই জয়েন করুন 1xBet, Linebet বা Melbet-এ<br>অফিশিয়াল প্রোমো কোড: <b>Oxy11</b></p>
     <p class="payment-info"><b>Aviator এ ক্লিক করে ডেমো দেখুন 3000$ দিয়ে</b></p>
+    <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank" class="register-btn">🚀Crash Game</a>
     <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank" class="register-btn">🚀Aviator Game</a>
+  </div>
   </div>
 </div>
 
