--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <span class="popup-close" onclick="closePopup()">×</span>
     <h2>🎉 বিশেষ অফার!</h2>
     <p>এখনই জয়েন করুন 1xBet, Linebet বা Melbet-এ<br>অফিশিয়াল প্রোমো কোড: <b>Oxy11</b></p>
-    <p class="payment-info"><b>Aviator এ ক্লিক করে ডেমো দেখুন 3000$ দিয়ে</b></p>
+    <p class="payment-info"><b>Cash/Aviator এ ক্লিক করে ডেমো দেখুন</b></p>
     <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank" class="register-btn">🚀Crash Game</a>
     <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank" class="register-btn">🚀Aviator Game</a>
   </div>
