--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     .register-btn {
       background-color: #0a57c3;
       color: white;
+      gap: 8px;
       padding: 12px 25px;
       font-size: 16px;
       border: none;
