--- a/index.html
+++ b/index.html
@@ -33,132 +33,122 @@
   </div>
 
   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Popup Example</title>
+  <title>Popup Offer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
+      background: #f2f2f2;
     }
 
-    /* Overlay */
     .popup-overlay {
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
       display: flex;
-      justify-content: center;
       align-items: center;
-      z-index: 1000;
+      justify-content: center;
+      z-index: 9999;
     }
 
-    /* Popup Box */
-    .popup {
+    .popup-box {
       background: white;
-      padding: 25px;
+      padding: 20px;
       border-radius: 10px;
-      width: 90%;
-      max-width: 350px;
-      position: relative;
+      max-width: 90%;
       text-align: center;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-      animation: slideDown 0.5s ease;
+      position: relative;
+      animation: fadeIn 0.3s ease-in-out;
     }
 
-    @keyframes slideDown {
-      from { transform: translateY(-100px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
     }
 
-    /* Close button (X) */
+    .popup-box h2 {
+      margin-top: 0;
+      color: #333;
+    }
+
+    .popup-box p {
+      color: #555;
+    }
+
+    .popup-box a.button {
+      display: block;
+      background: #0d6efd;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      margin: 10px 0;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: background 0.3s;
+    }
+
+    .popup-box a.button:hover {
+      background: #084298;
+    }
+
     .close-btn {
       position: absolute;
       top: 10px;
       right: 15px;
-      font-size: 20px;
-      font-weight: bold;
-      color: black;
+      font-size: 22px;
+      color: #555;
       cursor: pointer;
     }
 
-    .popup h2 {
-      color: black;
-      font-size: 22px;
-      margin-bottom: 15px;
-    }
+    @media (max-width: 500px) {
+      .popup-box h2 {
+        font-size: 18px;
+      }
 
-    .popup p {
-      color: #222;
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
-
-    .popup-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .popup-buttons a {
-      padding: 10px 15px;
-      background-color: black;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-
-    .popup-buttons a:hover {
-      background-color: #333;
-    }
-
-    @media (max-width: 400px) {
-      .popup-buttons {
-        flex-direction: column;
-        gap: 10px;
+      .popup-box a.button {
+        font-size: 14px;
+        padding: 8px 16px;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- Popup HTML -->
 <div class="popup-overlay" id="popup">
-  <div class="popup">
-    <span class="close-btn" onclick="closePopup()">×</span>
-    <h2>📢 জনপ্রিয় গেম </h2>
-    <p>1xBet / Linebet নিচে দেওয়া বাটনে ক্লিক করে দেখুন ফ্রী তে গেম উপভোগ করুন</p>
-    <div class="popup-buttons">
-      <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank">🚀 Crash Game</a>
-      <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank">Supar Ace</a>
-    </div>
+  <div class="popup-box">
+    <span class="close-btn" onclick="closePopup()">❌</span>
+    <h2>🔥 এখনই খেলুন & জিতুন!</h2>
+    <p>সেরা ক্যাসিনো এবং স্লট গেম উপভোগ করুন এখনই।</p>
+
+    <a class="button" href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank">
+      🎮 Crash Game খেলুন
+    </a>
+
+    <a class="button" href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank">
+      🎰 Super Ace Slot খেলুন
+    </a>
   </div>
 </div>
 
-<!-- JS to close popup -->
 <script>
   function closePopup() {
-    document.getElementById('popup').style.display = 'none';
+    document.getElementById("popup").style.display = "none";
   }
 
-  // Auto show popup after 2s
+  // Auto open on page load
   window.onload = function() {
-    setTimeout(() => {
-      document.getElementById('popup').style.display = 'flex';
-    }, 2000);
-  }
+    document.getElementById("popup").style.display = "flex";
+  };
 </script>
 
 </body>
 </html>
-
   <!------ses------->
 
   <div id="combo-container">
