--- a/index.html
+++ b/index.html
@@ -32,106 +32,107 @@
     </marquee>
   </div>
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Popup Offer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Register Popup</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background: #f2f2f2;
+      font-family: Arial, sans-serif;
     }
 
     .popup-overlay {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: flex;
-      align-items: center;
+      background-color: rgba(0,0,0,0.5);
+      display: none;
       justify-content: center;
+      align-items: center;
       z-index: 9999;
     }
 
-    .popup-box {
-      background: white;
-      padding: 20px;
+    .popup-content {
+      background-color: #fff;
+      padding: 25px 20px;
       border-radius: 10px;
-      max-width: 90%;
+      max-width: 350px;
+      width: 90%;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
       text-align: center;
       position: relative;
-      animation: fadeIn 0.3s ease-in-out;
+      animation: zoomIn 0.4s ease;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    @keyframes zoomIn {
+      from { transform: scale(0.5); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
-    .popup-box h2 {
-      margin-top: 0;
-      color: #333;
-    }
-
-    .popup-box p {
-      color: #555;
-    }
-
-    .popup-box a.button {
-      display: block;
-      background: #0d6efd;
-      color: white;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 10px 0;
-      border-radius: 5px;
-      font-size: 16px;
-      transition: background 0.3s;
-    }
-
-    .popup-box a.button:hover {
-      background: #084298;
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 15px;
+    .popup-content h2 {
+      color: black;
+      margin-bottom: 10px;
       font-size: 22px;
-      color: #555;
-      cursor: pointer;
     }
 
-    @media (max-width: 500px) {
-      .popup-box h2 {
-        font-size: 18px;
-      }
+    .popup-content p {
+      color: black;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
 
-      .popup-box a.button {
-        font-size: 14px;
-        padding: 8px 16px;
-      }
+    .popup-close {
+      position: absolute;
+      top: 8px; right: 12px;
+      font-size: 24px;
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .btn-group {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .register-btn {
+      background-color: #0a57c3;
+      color: white;
+      padding: 10px 15px;
+      font-size: 15px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      text-decoration: none;
+      flex: 1 1 40%;
+      text-align: center;
+      transition: background-color 0.3s ease;
+    }
+
+    .register-btn:hover {
+      background-color: #003f99;
     }
   </style>
 </head>
 <body>
 
+<!-- Popup -->
 <div class="popup-overlay" id="popup">
-  <div class="popup-box">
-    <span class="close-btn" onclick="closePopup()">❌</span>
-    <h2>🔥 এখনই খেলুন & জিতুন!</h2>
-    <p>সেরা ক্যাসিনো এবং স্লট গেম উপভোগ করুন এখনই।</p>
-
-    <a class="button" href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank">
-      🎮 Crash Game খেলুন
-    </a>
-
-    <a class="button" href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank">
-      🎰 Super Ace Slot খেলুন
-    </a>
+  <div class="popup-content">
+    <span class="popup-close" onclick="closePopup()">×</span>
+    <h2>🎉 বিশেষ অফার!</h2>
+    <p>১xBet, Linebet, Melbet এ এখনই জয়েন করুন<br>
+      প্রোমো কোড: <b>Oxy11</b> ব্যবহার করুন এবং পাচ্ছেন 100% বোনাস!</p>
+    <div class="btn-group">
+      <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank" class="register-btn">🚀 Crash Game</a>
+      <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank" class="register-btn">🎰 Super Ace</a>
+    </div>
   </div>
 </div>
 
@@ -140,14 +141,17 @@
     document.getElementById("popup").style.display = "none";
   }
 
-  // Auto open on page load
-  window.onload = function() {
-    document.getElementById("popup").style.display = "flex";
-  };
+  window.addEventListener("load", function () {
+    setTimeout(function () {
+      document.getElementById("popup").style.display = "flex";
+    }, 500); // 0.5 সেকেন্ড পরে দেখাবে
+  });
 </script>
 
 </body>
 </html>
+
+
   <!------ses------->
 
   <div id="combo-container">
