--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
     <p>🏆Choose your platform & start winning🏆</p>
   </header>
 
-  <div class="marquee-wrapper" style="background: linear-gradient(90deg, #0f172a, #000080); padding: 8px 0; color: #ffeb3b; font-size: 14px; font-weight: bold; font-family: 'Arial', sans-serif;">
-    <marquee behavior="scroll" direction="left" scrollamount="6" onmouseover="this.stop()" onmouseout="this.start()">
-      📢 স্বাগতম ইন্টারন্যাশনাল ব্যাটিং প্লাটফর্মে 1xBet, Linebet । আমাদের থেকে ডিপোজিট উইথড্র নিন । ডিপোজিট 50৳ উইথড্র 150৳ । সময়ের সেরা সার্ভিস পেতে এখনি নিচের দেওয়া নাম্বারে যোগাযোগ করুন।
-    </marquee>
-  </div>
+<!----popup--->
 
   <!DOCTYPE html>
 <html lang="bn">
