--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
 <div class="popup-overlay" id="popup">
   <div class="popup-content">
     <span class="popup-close" onclick="closePopup()">×</span>
-    <h2>🎉 বিশেষ অফার!</h2>
-    <p>১xBet, Linebet, Melbet এ এখনই জয়েন করুন<br>
-      প্রোমো কোড: <b>Oxy11</b> ব্যবহার করুন এবং পাচ্ছেন 100% বোনাস!</p>
+    <h2>নিচের বাটনে ক্লিক করুন</h2>
+    <p>1xBet, Linebet, Melbet এ এখনই জয়েন করুন<br>
+      প্রোমো কোড: <b>Oxy11</b> </p>
+    <p><b>crash/Super ace ক্লিক করুন ফ্রি খেলুন</b></p>
     <div class="btn-group">
       <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank" class="register-btn">🚀 Crash Game</a>
       <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank" class="register-btn">🎰 Super Ace</a>
