--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     endTime.setHours(12, 0, 0);
   } else if (hour >= 12 && hour < 17) {
     newsText = "💸 দুপুরের অফার: ১১১% বোনাস + ১০৳ ক্যাশব্যাক 🤑!";
-    buttonLink = "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622";
+    buttonLink = "https://refpa58144.com/L?tag=d_905607m_2528c_Oxy11&site=905607&ad=2528&r=slots/game/105803/super-ace-deluxe";
     endTime.setHours(17, 0, 0);
   } else if (hour >= 17 && hour < 22) {
     newsText = "🌇 সন্ধ্যা প্রমো: Lucky Draw Entry একদম ফ্রি 🎁!";
@@ -436,7 +436,7 @@
     endTime.setHours(22, 0, 0);
   } else {
     newsText = "🌙 রাতের অফার: ক্যাসিনোতে ২০% ক্যাশব্যাক 🔥!";
-    buttonLink = "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622";
+    buttonLink = "https://linebet.press/oxy11";
     endTime.setHours(29, 0, 0);
   }
 
