--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
   let endTime = new Date();
 
   if (hour >= 5 && hour < 12) {
-    newsText = "🌞 সকাল বোনাস: রেজিস্ট্রেশনে ৫০টি ফ্রি স্পিন 🎰!";
-    buttonLink = "https://refpa3267686.top/L?tag=d_905607m_1622c_2023&site=905607&ad=1622";
+    newsText = "🌞 সকাল বোনাস: রেজিস্ট্রেশনে ১৫০টি ফ্রি স্পিন এবং ৩০০$ 🎰!";
+    buttonLink = "https://linebet.press/oxy11";
     endTime.setHours(12, 0, 0);
   } else if (hour >= 12 && hour < 17) {
     newsText = "💸 দুপুরের অফার: ১১১% বোনাস + ১০৳ ক্যাশব্যাক 🤑!";
