--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
       <div class="tag-popular">Popular</div>
       <h2>1xBet</h2>
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">1xbet Register</a>
-       <p class="payment-info"><b>ডেমো দেখুন 👇</b></p>
+       <!-- Promo Code Box -->
+<div class="promo-code-box">
+  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+</div>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=casino/1xlive" target="_blank">🎰Casino</a>
