--- a/index.html
+++ b/index.html
@@ -232,6 +232,24 @@
 </section>
   <h2><b>Master Agent Service</b></h2>
   <style>
+    .promo-code-box {
+  background: linear-gradient(to right, #1f2937, #0f172a);
+  color: #fff;
+  padding: 12px 20px;
+  margin: 10px 0;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  animation: promo-blink 1.5s infinite;
+}
+
+@keyframes promo-blink {
+  0%   { opacity: 1; }
+  50%  { opacity: 0.6; }
+  100% { opacity: 1; }
+}
   .payment-table {
     width: 100%;
     border-collapse: collapse;
