--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
       <div class="tag-popular">Popular</div>
       <h2>Linebet</h2>
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Linebet Register</a>
-       <p class="payment-info"><b>ডেমো দেখুন 👇</b></p>
+       <!-- Promo Code Box -->
+<div class="promo-code-box">
+  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+</div>
       <div class="category-links">
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
         <a href="https://linebet.press/oxy11" target="_blank">🎰Casino</a>
@@ -189,7 +192,10 @@
       <div class="tag-popular">Recommend</div>
       <h2>Melbet</h2>
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Melbet Register</a>
-      <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
+      <!-- Promo Code Box -->
+<div class="promo-code-box">
+  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+</div>
       <div class="category-links">
         <a href="https://melbet6767.netlify.app/" target="_blank">🏟️Sports</a>
         <a href="https://melbet6767.netlify.app/" target="_blank">🎰Casino</a>
@@ -202,7 +208,10 @@
       <div class="tag-popular">New 🌍</div>
       <h2>PlanBet</h2>
       <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank">Planbet Register</a>
-      <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
+      <!-- Promo Code Box -->
+<div class="promo-code-box">
+  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+</div>
       <div class="category-links">
         <a href="https://planbet.me/Oxy11" target="_blank">🏟️Sports</a>
         <a href="https://planbet.me/Oxy11" target="_blank">🎰Casino</a>
@@ -215,7 +224,10 @@
       <div class="tag-popular">Promo</div>
       <h2>Betwiner</h2>
       <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" class="join-btn" target="_blank">Betwiner Register</a>
-      <p class="payment-info">Payment: bKash, Nagad, Rocket</p>
+      <!-- Promo Code Box -->
+<div class="promo-code-box">
+  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+</div>
       <div class="category-links">
         <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🏏Sports</a>
         <a href="https://bw-prm.com/chicke-road-3-lite/?p=%2Fregistration%2F&s1=Oxy11&id=1KPH" target="_blank">🎰Casino</a>
